--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web App</title>
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta name="description" content="Web App para usuarios y administradores." />
     <meta name="author" content="Estación Rogue Trader" />
     <meta name="keywords" content="web app, React, usuarios, administradores" />
