Updated backend with logger implementation and various fixes

--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web App</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
+    <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" />
+    <link rel="manifest" href="./public/site.webmanifest" />
 
     <meta name="description" content="Web App para usuarios y administradores." />
     <meta name="author" content="Estación Rogue Trader" />
     <meta name="keywords" content="web app, React, usuarios, administradores" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="./public/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
